--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^10.0.2",
     "sequelize": "^6.37.0"
   },
-  "devDependencies": {},
   "description": ""
 }
